--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.8.1
 crispy-bootstrap5==2024.2
-Django>=5.0.6
+dj-database-url==2.2.0
+Django==5.0.6
 django-crispy-forms==2.1
 python-dotenv==1.0.1
 sqlparse==0.5.0
